<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/ui">

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/themeColor"
            android:key="themeColor"
            android:title="@string/preference_theme_color"
            android:summary="@string/preference_theme_color_summary"
            android:icon="@drawable/icon_palette"/>

        <sushi.hardcore.droidfs.widgets.SimpleActionPreference
            android:title="@string/reset_theme_color"
            android:summary="@string/reset_theme_color_summary"
            android:key="resetThemeColor"
            android:icon="@drawable/icon_restore"/>

        <SwitchPreferenceCompat
            android:title="@string/auto_fit_title"
            android:summary="@string/auto_fit_summary"
            android:key="autoFit"
            android:defaultValue="false"
            android:icon="@drawable/icon_screen_rotation"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/explorer">

        <sushi.hardcore.droidfs.widgets.ColoredListPreference
            app:defaultValue="name"
            app:entries="@array/sort_orders_entries"
            app:entryValues="@array/sort_orders_values"
            app:key="sort_order"
            android:title="@string/settings_title_sort_order"
            android:icon="@drawable/icon_sort"/>

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:icon="@drawable/icon_folder"
            android:key="folders_first"
            android:title="@string/folders_first"
            android:summary="@string/folders_first_summary"/>

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:icon="@drawable/icon_folder_search"
            android:key="map_folders"
            android:title="@string/map_folders"
            android:summary="@string/map_folders_summary"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/unsafe_features">

        <Preference
            android:title="@string/manage_unsafe_features"
            android:summary="@string/manage_unsafe_features_summary"
            android:icon="@drawable/icon_warning"
            android:fragment="sushi.hardcore.droidfs.SettingsActivity$UnsafeFeaturesSettingsFragment"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:title="@string/github"
            android:summary="@string/github_summary"
            android:icon="@drawable/icon_github">
            <intent android:action="android.intent.action.VIEW" android:data="https://github.com/hardcore-sushi/DroidFS"/>
        </Preference>

        <Preference
            android:title="@string/gitea"
            android:summary="@string/gitea_summary"
            android:icon="@drawable/icon_gitea">
            <intent android:action="android.intent.action.VIEW" android:data="https://forge.chapril.org/hardcoresushi/DroidFS"/>
        </Preference>

        <Preference
            android:key="version"
            android:icon="@drawable/icon_info"
            android:title="@string/version"
            android:summary="@string/versionName"/> <!--added by gradle at build time-->

    </PreferenceCategory>

</PreferenceScreen>