<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/select_all"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/icon_select_all"/>

    <item
        android:id="@+id/delete"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/icon_delete" />

    <item
        android:id="@+id/copy"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/icon_copy"
        android:title="@string/copy_menu_title"/>

    <item
        android:id="@+id/cut"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/cut"
        android:icon="@drawable/icon_cut"/>

    <item
        android:id="@+id/decrypt"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/icon_decrypt"
        android:title="@string/decrypt_files"/>

    <item
        android:id="@+id/share"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/icon_share"
        android:title="@string/share"/>

    <item
        android:id="@+id/external_open"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/external_open"/>

    <item
        android:id="@+id/open_as"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/open_as"/>

    <item
        android:id="@+id/rename"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/rename"/>

    <item
        android:id="@+id/validate"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/icon_check"/>

    <item
        android:id="@+id/sort"
        app:showAsAction="ifRoom"
        android:title="@string/sort_by"
        android:icon="@drawable/icon_sort"/>

    <item
        android:id="@+id/close"
        app:showAsAction="ifRoom"
        android:title="@string/close_volume"
        android:icon="@drawable/icon_close"/>

</menu>
