<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/select_all"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/select_all"
        android:icon="@drawable/icon_select_all"/>

    <item
        android:id="@+id/remove"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/remove"
        android:icon="@drawable/icon_delete" />

    <item
        android:id="@+id/settings"
        app:showAsAction="ifRoom"
        android:title="@string/settings"
        android:icon="@drawable/icon_settings"/>

    <item
        android:id="@+id/forget_password"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/forget_password"/>

    <item
        android:id="@+id/change_password"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/change_password"/>

    <item
        android:id="@+id/copy"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/rename"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/rename"/>

</menu>