<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/volume_operation_horizontal_gap"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingVertical="@dimen/volume_operation_vertical_gap">

        <TextView
            android:id="@+id/text_volume_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/volume_operation_vertical_gap"
            android:gravity="center"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_current_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_password_label" />

        <EditText
            android:id="@+id/edit_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/volume_operation_vertical_gap"
            android:autofillHints="password"
            android:hint="@string/current_password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password_label" />

        <EditText
            android:id="@+id/edit_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/volume_operation_vertical_gap"
            android:text="@string/new_password_confirmation_label" />

        <EditText
            android:id="@+id/edit_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password_confirmation_hint"
            android:inputType="textPassword"
            android:maxLines="1" />

        <CheckBox
            android:id="@+id/checkbox_save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/volume_operation_vertical_gap"
            android:text="@string/fingerprint_save_checkbox_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/volume_operation_button_height"
            android:layout_gravity="center"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="@dimen/volume_operation_vertical_gap"
            android:text="@string/change_password" />

    </LinearLayout>

</ScrollView>