<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <RelativeLayout
        android:id="@+id/container_hidden_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/volume_operation_horizontal_gap"
        android:paddingVertical="@dimen/selectable_row_vertical_padding"
        android:layout_marginBottom="@dimen/volume_operation_vertical_gap">

        <ImageView
            android:id="@+id/icon_hidden_volume"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_hidden"
            android:layout_marginEnd="@dimen/volume_operation_horizontal_gap" />

        <LinearLayout
            android:id="@+id/switch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toStartOf="@id/switch_hidden_volume"
            android:layout_toEndOf="@id/icon_hidden_volume">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hidden_volume"
                android:textSize="@dimen/title_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorSecondary"
                android:text="@string/hidden_volume_description"/>

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_hidden_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/volume_operation_horizontal_gap"
        android:text="@string/volume_path_label"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edit_volume_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/volume_operation_horizontal_gap"
        android:hint="@string/volume_path_hint"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:maxLines="1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorSecondary"
        android:layout_marginHorizontal="@dimen/volume_operation_horizontal_gap"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_pick_directory"
        android:layout_width="wrap_content"
        style="@style/RoundButton"
        android:drawableStart="@drawable/icon_folder_search"
        android:text="@string/pick_directory"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/text_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/or"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/button_enter_path"
        android:layout_width="wrap_content"
        style="@style/RoundButton"
        android:drawableStart="@drawable/icon_edit"
        android:text="@string/enter_volume_path"
        android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_volume"
        android:checked="true"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_action"
        android:layout_width="match_parent"
        android:layout_height="@dimen/volume_operation_button_height"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/volume_operation_button_horizontal_margin"
        android:layout_marginTop="@dimen/volume_operation_vertical_gap"
        android:visibility="gone"
        android:text="@string/create_volume" />

</LinearLayout>